2006-06-18 François Proulx <francois.proulx@gmail.com>
	* Added creation_date , last_update_date support to File content (with proper HTTP caching handling)
	* Added hyperlinks URL support in Picture content
	* Fixed constants in Flickr Content
	* Fixed #171 (Can't add existing content to Node)

2006-06-17 François Proulx <francois.proulx@gmail.com>
	* First iteration of JiWire CSV export
		* Use : hotspot_status.php?format=JiWireCSV
	* Fully working, but Excel doesn't seem to handle well UTF-8
	  investigation in progress.

2006-06-08 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix #151.  It was still around after all.

2006-06-08 Benoit Grégoire  <bock@step.polymtl.ca>
	* Completely refactor the look and html of the content manager, statistics and most object's administrative interfaces.
	Should be much simpler and clearer now.
	No refactoring of the editing flow has been done yet.
	* Spell check the french translation, and add a few of the missing strings.

2006-05-26 François Proulx <francois.proulx@gmail.com>
	* Added 'ja' to database locales table

2006-05-26 François Proulx <francois.proulx@gmail.com>
	* Added Japanese translation .po file (Thanks to taedu AT ninjin-net DOT net)

2006-05-24 François Proulx <francois.proulx@gmail.com>
	* Stylesheet changes for left_area_bottom content block.

2006-05-24 François Proulx <francois.proulx@gmail.com>
	* Simplified Google Maps JS code to use more of the v2 abstraction
	* Improved admin panels CSS classes

2006-05-23 Benoit Grégoire  <bock@step.polymtl.ca>
	* config.php:  Disable USE_CACHE_LITE, it's definitely not stable, and causes very hard to track down problems with Internet Explorer.

2006-05-22 François Proulx <francois.proulx@gmail.com>
	* Fixed isValidUsername() Js function to allow caret and dot characters

2006-05-22 François Proulx <francois.proulx@gmail.com>
	* Use Pgsql persistent connections

2006-05-22 François Proulx <francois.proulx@gmail.com>
	* Removed unnecessary debug message